--- a/Vocabulous/src/overview-page.html
+++ b/Vocabulous/src/overview-page.html
@@ -52,7 +52,7 @@
         --app-secondary-color: black;
         --containercolor: #ffffff;
         --navigationcolorbackground:#f2f2f2;
-        --navigationcolorfont:#000000;
+        --itemcolor: black;
         color:black;
         display: block;
       }
@@ -92,7 +92,6 @@
       }
 
       .drawer-list a {
-        
         display: block;
         padding: 0 16px;
         text-decoration: none;
@@ -116,9 +115,11 @@
         height: 20px;
         width: 20px;
         padding-right: 5%;
-        color: #595959;
+        color: var(--itemcolor);
+        opacity: 0.6;
+
       }
-     
+     /*#595959*/
     </style>
 
     <app-location
