--- a/old/src/unit-page.html
+++ b/old/src/unit-page.html
@@ -15,6 +15,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
+<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown.html">
+<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
+<link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
+<link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="unit-page">
@@ -33,6 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 23px;
       }
       table{
+        margin-top: 100px;
         margin-left: 40px;
         width: 96.5%;
       }
@@ -70,16 +75,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-top: -49px;
         position:absolute;
       }
-
+      d2l-dropdown{
+        float:right;
+      }
     </style>
 
     <div class="card">
       <h1>Unit 1</h1> <!--Name der Unit-->
       <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
-      <div>
-        <paper-button class="practiceUnit" name="practiceUnit" raised noink>Practice Unit</paper-button>
-        <paper-button class="selfCheck" name="selfCheck" raised noink>Self-check</paper-button>
-      </div>
+      <d2l-dropdown>
+              <paper-icon-button style="width: 35px;height: 35px;"class="d2l-dropdown-opener" name="menu" icon="vaadin:ellipsis-dots-v" noink></paper-icon-button>
+              <d2l-dropdown-menu>
+                  <d2l-menu label="Menu">
+                    <d2l-menu-item text="Practice Variants">
+                        <d2l-menu>
+                            <d2l-menu-item name="practiceUnit" text="Practice Unit"></d2l-menu-item>
+                        </d2l-menu>
+                    </d2l-menu-item>
+                    <d2l-menu-item name="selfCheck" text="Self-check"></d2l-menu-item>
+                  </d2l-menu>
+              </d2l-dropdown-menu>
+      </d2l-dropdown>
   
       <table id="vocabulary">
         
@@ -100,10 +116,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
       }
       _getPracticeButton(){
-        return Polymer.dom(this.root).querySelector("paper-button[name=practiceUnit]");
+        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=practiceUnit]");
       }
       _getExamButton(){
-        return Polymer.dom(this.root).querySelector("paper-button[name=selfCheck]");
+        return Polymer.dom(this.root).querySelector("d2l-menu-item[name=selfCheck]");
       }
     }
     window.customElements.define(UnitPage.is, UnitPage);
