--- a/old/src/register-login.html
+++ b/old/src/register-login.html
@@ -48,17 +48,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin: 0 !important;
         padding: 0 !important;
       }
-      /*.header::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        top: 36%;
-        border-bottom: 4px solidvar(--valo-primary-color-50pct);
-      }*/
+      
       .header h1 {
-        color:  var(--headlineCard);
+        color:  #6d6d6d;
         font-size: 24px;
-        font-weight: 200;
+        font-family: 'Open sans';
+        font-weight: 400;
         margin: 0 auto 5px;
         text-align: left;
         width: 250px;
