--- a/Vocabulous/src/practiceunit-page.html
+++ b/Vocabulous/src/practiceunit-page.html
@@ -245,7 +245,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <td><h3 class="german">German</h3></td>
           <td><paper-toggle-button noink checked class="language"></paper-toggle-button></td>
           <td> <h3 class="english">English</h3></td>
-          <td><paper-icon-button icon="icons:info-outline" class="language"></paper-icon-button></td>
+          <td><iron-icon icon="icons:info-outline" class="language"></iron-icon></td>
           <paper-dialog id="infoLanguage">
             <p>When you select "German" you will have to
               write German words and when you select "English" you will have to write
@@ -340,7 +340,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
       }
       _getLanguageInfo(){
-        return Polymer.dom(this.root).querySelector("paper-icon-button[class=language]");
+        return Polymer.dom(this.root).querySelector("iron-icon[class=language]");
       }
       _getNextInfo(){
         return Polymer.dom(this.root).querySelector("iron-icon[class=next]");
